compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__not_byte_aligned.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn thing() {\n  4\n}\n\nfn go() {\n  <<256:4>>\n}\n"
---
error: Unsupported feature for compilation target
  ┌─ /src/javascript/error.rakun:7:5
  │
7 │   <<256:4>>
  │     ^^^^^

Non byte aligned array is not supported for JavaScript compilation.
