compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__one.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<256>>\n}\n"
---
import { toBitArray } from "../rakun.mjs";

function go() {
  return toBitArray([256]);
}
