compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__utf8_codepoint_typescript.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  <<x:utf8_codepoint, \"Rakun\":utf8>>\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  <<x:utf8_codepoint, "Rakun":utf8>>
}


----- TYPESCRIPT DEFINITIONS
import type * as _ from "../rakun.d.mts";

export function go(x: _.UtfCodepoint): _.BitArray;
